# WP1-Polyhedra

./: .dockerignore  .gitignore  Dockerfile  LINEAR_REGIONS_EXPLAINED.md  Manifest.toml  Project.toml  README.md  arg_parser.py  claude_code_instructions_new_functional_eq.md  compatability_analysis.md  compute_trees.jl  config.yaml  configs_to_springfield.sh  current_figures.md  current_run_config.yaml  exam_experiment.ipynb  experiment_model.pth  find_and_plot.jl  icml_figures  init_file.yml  investigation.ipynb  main.py  main_test.py  make_counts.py  model_convex.pth  moon_experiment_train_models.py  moon_experiment_trees_ncounts.py  new_estimator_implementation.md  new_estimator_next_steps.md  overview.ipynb  plotcodelib.py  polytope_dict.pkl  polytope_experiment.ipynb  pyproject.toml  run_computation.sh  run_final_geobin_composite.sh  run_geobin.jl  run_label_noise_estimator.py  run_mnist_capacity_estimator.py  run_mnist_full_lenet_baselines.sh  (+16 more)
.cache/: figure1_pedagogy_weights.pt
paper_reproduction/: .gitignore  README.md  pyproject.toml  run_all.sh  run_label_noise_estimator.py  run_training.py  step1_train.sh  step2_estimate.sh  step3_baselines.sh  step4_plot.sh
paper_reproduction/configs/: generate_composite.py  generate_mnist.py  generate_wbc.py
paper_reproduction/scripts/: plot_calibration_scatter.py  plot_figure1_pedagogy.py  plot_layer_profile_last_epoch.py  plot_mnist_capacity_bars.py  plot_training_curves.py  run_mi_baselines.py  run_mnist_fc_baselines.py
paper_reproduction/src_experiment/: dataset.py  functional_quotient.py  paths.py  run_experiment.py
(+4254 files in other folders)
