[project]
name = "polyhedra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bigtree>=1.0.0",
    "cvxpy>=1.6.5",
    "intvalpy>=1.6.6",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "polytope>=0.2.5",
    "pycddlib-standalone>=3.0.0",
    "pyqt5>=5.15.11",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
